@@ -35,9 +35,9 @@ class ProductServiceTest {
     @DisplayName("검색어 없이 상품리스트 전체 조회시 반환된 리스트의 개수는 저장되어있는 상품의 개수와 같다.")
     public void testGetProductList() {
         //given
-        Product product1 = Product.builder().id(1L).name("P1").description("D1").price(1000).quantity(10).build();
-        Product product2 = Product.builder().id(1L).name("P1").description("D1").price(1000).quantity(10).build();
-        Product product3 = Product.builder().id(1L).name("P1").description("D1").price(1000).quantity(10).build();
+        Product product1 = Product.builder().id(1L).name("P1").description("D1").price(1000).build();
+        Product product2 = Product.builder().id(1L).name("P1").description("D1").price(1000).build();
+        Product product3 = Product.builder().id(1L).name("P1").description("D1").price(1000).build();
 
         List<Product> productList = List.of(product1, product2, product3);
 
@@ -55,12 +55,7 @@ class ProductServiceTest {
     @DisplayName("특정 검색어를 입력하고 상품리스트 전체 조회시 반환된 상품의 이름은 검색어가 포함된 상품명과 같다.")
     public void testGetProductListWithSearchOption() {
         //given
-        Product product1 = Product.builder().id(1L).name("productA").description("D1").price(1000).quantity(10).build();
-        Product product2 = Product.builder().id(1L).name("productB").description("D1").price(1000).quantity(10).build();
-        Product product3 = Product.builder().id(1L).name("productC").description("D1").price(1000).quantity(10).build();
-        Product product4 = Product.builder().id(1L).name("productD").description("D1").price(1000).quantity(10).build();
-        Product product5 = Product.builder().id(1L).name("productE").description("D1").price(1000).quantity(10).build();
-
+        Product product1 = Product.builder().id(1L).name("productA").description("D1").price(1000).build();
         List<Product> productList = List.of(product1);
 
         ProductSearch search = new ProductSearch("productA");
@@ -71,14 +66,14 @@ class ProductServiceTest {
         List<ProductResponseDto> result = productService.getProductList(search, 1, 1L);
 
         //then
-        assertThat(result.get(0).name()).isEqualTo("productA");
+        assertThat(result.getFirst().name()).isEqualTo("productA");
     }
 
     @Test
     @DisplayName("상품 상세조회시 반환 결과의 상품 이름과 상세설명은 조회한 상품의 이름과 상세설명과 같다.")
     public void testGetProductDetails() {
         //given
-        Product product = Product.builder().id(1L).name("Product").description("Description").price(1000).quantity(10).build();
+        Product product = Product.builder().id(1L).name("Product").description("Description").price(1000).build();
 
         when(productRepository.findById(1L)).thenReturn(Optional.ofNullable(product));
 
